--- a/brownie-config.yml
+++ b/brownie-config.yml
@@ -1,1 +1,23 @@
 dotenv: .env
+dependencies:
+  - OpenZeppelin/openzeppelin-contracts@4.8.3
+compiler:
+  solc:
+    remappings:
+      - "@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.8.3"
+      - "@openzeppelin/contracts@4.8.3/token/ERC1155/ERC1155.sol=/Users/yalchin403/.brownie/packages/OpenZeppelin/openzeppelin-contracts@4.8.3/contracts/token/ERC1155/ERC1155.sol"
+      - "@openzeppelin/contracts@4.8.3/access/Ownable.sol=/Users/yalchin403/.brownie/packages/OpenZeppelin/openzeppelin-contracts@4.8.3/contracts/access/Ownable.sol"
+      - "@openzeppelin/contracts@4.8.3/utils/Strings.sol=/Users/yalchin403/.brownie/packages/OpenZeppelin/openzeppelin-contracts@4.8.3/contracts/utils/Strings.sol"
+      - "@openzeppelin/contracts@4.8.3/utils/Counters.sol=/Users/yalchin403/.brownie/packages/OpenZeppelin/openzeppelin-contracts@4.8.3/contracts/utils/Counters.sol"
+      - "@openzeppelin/contracts@4.8.3/proxy/ERC1967/ERC1967Proxy.sol=/Users/yalchin403/.brownie/packages/OpenZeppelin/openzeppelin-contracts@4.8.3/contracts/proxy/ERC1967/ERC1967Proxy.sol"
+
+networks:
+  goerli:
+    gas_limit: 20000000
+    gas_price: 1000000000
+    host: https://goerli.infura.io/v3/${WEB3_INFURA_PROJECT_ID}
+    network_id: 5
+    verify: True
+
+wallets:
+  from_key: ${PRIVATE_KEY}
